# osm-io

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  MAINTENANCE_WORKFLOW.md  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance.md
.github/workflows/: publish.yml
benches/: apidb-to-pbf.rs  pbf-to-apidb.rs  prof.rs
examples/: apidb-to-pbf.rs  count-pbf-elements.rs  parallel-count-pbf-elements.rs  parallel-pbf-io.rs  pbf-info.rs  pbf-io.rs  pbf-to-apidb.rs
src/: lib.rs
src/config/: mod.rs
src/error/: mod.rs
src/osm/: mod.rs
src/osm/apidb_dump/: apidb_dump_block.rs  block_iterator.rs  element_iterator.rs  mod.rs  node_record.rs  node_relation.rs  node_relations_reader.rs  node_tag_record.rs  reader.rs  relation_member_record.rs  relation_relation.rs  relation_relations_reader.rs  sql.rs  table_def.rs  table_fields.rs  table_pkey.rs  table_reader.rs  table_record.rs  user_record.rs  way_record.rs  way_relation.rs  way_relations_reader.rs  way_tag_record.rs  writer.rs
src/osm/apidb_dump/read/: block_iterator.rs  changeset_record.rs  element_iterator.rs  mod.rs  node_record.rs  node_relation.rs  node_relations_reader.rs  node_tag_record.rs  reader.rs  relation_member_record.rs  relation_record.rs  relation_relation.rs  relation_relations_reader.rs  relation_tag_record.rs  table_def.rs  table_fields.rs  table_pkey.rs  table_reader.rs  table_record.rs  user_record.rs  way_node_record.rs  way_record.rs  way_relation.rs  way_relations_reader.rs  way_tag_record.rs
src/osm/apidb_dump/write/: current_object.rs  mod.rs  table_data_writer.rs  table_data_writers.rs  toc.rs  writer.rs
src/osm/apidb_dump/write/toc/: mapping.json
src/osm/converters/: mod.rs
src/osm/model/: bounding_box.rs  changeset.rs  coordinate.rs  element.rs  file_info.rs  mod.rs  node.rs  relation.rs  tag.rs  user.rs  way.rs
src/osm/pbf/: blob.rs  blob_desc.rs  blob_iterator.rs  bounding_box_calculator.rs  calc_bounding_box_command.rs  compression_type.rs  dense_group_builder.rs  element_accumulator.rs  element_iterator.rs  file_block.rs  file_block_compactor.rs  file_block_iterator.rs  file_block_metadata.rs  file_info.rs  mod.rs  osm_data.rs  osm_header.rs  parallel_element_iteration_command.rs  parallel_element_processor.rs  parallel_writer.rs  reader.rs  relations_group_builder.rs  string_table_builder.rs  thread_local_accumulator.rs  ways_group_builder.rs  writer.rs
src/osm/pbf/osmpbf/: mod.rs
src/osm/replication/: mod.rs
src/reporting/: disk_usage.rs  mod.rs  stopwatch.rs
tests/: test_apidb_dump_reader_parallel_pbf_writer_pipe.rs  test_apidb_dump_reader_pbf_writer_pipe.rs  test_bounding_box_calculator.rs  test_parallel_pbf_reader.rs  test_pbf_reader.rs  test_pbf_reader_apidb_dump_writer_pipe.rs  test_pbf_rw_parallel_pipe.rs  test_pbf_rw_pipe.rs  test_pbf_writer.rs  test_uncompressed_pbf_rw.rs
tests/common/: mod.rs
tests/fixtures/: history-niue-230109.osm.pbf  history-niue-230109.osm.pbf.analysis.json  niue-230109.osm.pbf  niue-230109.osm.pbf.analysis.json
