[package]
name = "osm-io"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Read and write OSM data"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/osm-io"
readme = "README.md"
keywords = ["OSM", "openstreetmap", "geo", "map", "osm-pbf"]
categories = ["science::geo"]
edition = "2021"
version = "0.1.4"

[dependencies]
bytes = "1.6.0"
prost = "0.12.4"
log = "0.4.21"
simple_logger = "4.3.3"
flate2 = "1.0.28"
chrono = "0.4.37"
json = "0.12.4"
transient-btree-index = "0.5.1"
regex = "1.10.4"
postgres = "0.19.7"
num-format = "0.4.4"
num_cpus = "1.16.0"
rand = "0.8.5"
anyhow = "1.0.82"
escape_string = "0.1.2"
command-executor = "0.1.0"
text-file-sort = "0.1.2"
unescape = "0.1.0"
uuid = { version = "1.8.0", features = ["v4", "std"] }

[build-dependencies]
prost-build = "0.12.3"

[dev-dependencies]
benchmark-rs = "0.1.1"
