[package]
name = "osm-io"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Read and write OSM data"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/osm-io"
readme = "README.md"
keywords = ["OSM", "openstreetmap", "geo", "map", "osm-pbf"]
categories = ["science::geo"]
edition = "2021"
version = "0.2.0"

[dependencies]
bytes = "1.6"
prost = "0.13"
log = "0.4"
simple_logger = "5.0"
flate2 = "1.0"
chrono = "0.4"
json = "0.12"
transient-btree-index = "0.5"
regex = "1.10"
postgres = "0.19"
num-format = "0.4"
num_cpus = "1.16"
rand = "0.8"
anyhow = "1.0"
escape_string = "0.1"
command-executor = "0.1"
text-file-sort = "0.1"
unescape = "0.1"
uuid = { version = "1.8", features = ["v4", "std"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
benchmark-rs = "0.1"
